--- a/public/themes/twitter/views/layouts/layout.hbs
+++ b/public/themes/twitter/views/layouts/layout.hbs
@@ -34,7 +34,10 @@
 		<link rel="stylesheet" href="{{app_context}}/font-awesome/css/font-awesome.min.css">
 		<link rel="stylesheet" href="/stylesheets/mermaid.css">
 		<link rel="stylesheet" href="/stylesheets/bootstrap-tokenfield.css">
-        <link rel="stylesheet" href="/stylesheets/jpushmenu.css">
+    <link rel="stylesheet" href="/stylesheets/jpushmenu.css">
+
+    <link rel="stylesheet" href="{{app_context}}/stylesheets/style.css">
+
 		<script src="{{app_context}}/jquery/jquery.min.js"></script>
 		<script src="{{app_context}}/bootstrap/js/bootstrap.min.js"></script>
         <script src="/javascripts/bootstrap-validator.js"></script>
