Added MathJax to wiki

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -3,14 +3,14 @@
 <head>
   {{#if result.kb_seo_title}}
     <title>{{result.kb_seo_title}}</title>
-    <meta property="og:title" content="{{result.kb_seo_title}}" />
+    <meta property="og:title" content="{{result.kb_seo_title}}"/>
   {{else}}
     {{#if result.kb_title}}
       <title>{{result.kb_title}}</title>
-      <meta property="og:title" content="{{result.kb_title}}" />
+      <meta property="og:title" content="{{result.kb_title}}"/>
     {{else}}
       <title>{{title}}</title>
-      <meta property="og:title" content="{{title}}" />
+      <meta property="og:title" content="{{title}}"/>
     {{/if}}
   {{/if}}
   <meta charset="utf-8">
@@ -18,18 +18,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   {{#if result.kb_seo_description}}
     <meta name="description" content="{{result.kb_seo_description}}">
-    <meta property="og:description" content="{{result.kb_seo_description}}" />
+    <meta property="og:description" content="{{result.kb_seo_description}}"/>
   {{else}}
     {{#if result.kb_body}}
       <meta name="description" content="{{substring (strip_md result.kb_body) 160}}">
-      <meta property="og:description" content="{{substring (strip_md result.kb_body) 160}}" />
+      <meta property="og:description" content="{{substring (strip_md result.kb_body) 160}}"/>
     {{else}}
       {{#ifCond homepage '===' true}}
         <meta name="description" content="{{config.settings.website_description}}">
-        <meta property="og:description" content="{{config.settings.website_description}}" />
+        <meta property="og:description" content="{{config.settings.website_description}}"/>
       {{else}}
         <meta name="description" content="{{__ "Powered by"}} openKB">
-        <meta property="og:description" content="{{__ "Powered by"}} openKB" />
+        <meta property="og:description" content="{{__ "Powered by"}} openKB"/>
       {{/ifCond}}
     {{/if}}
   {{/if}}
@@ -38,10 +38,10 @@
   {{else}}
     <meta name="keywords" content="openKB">
   {{/if}}
-  <meta property="og:type" content="article" />
-  <meta property="og:image" content="{{current_url}}/logo.png" />
-  <meta property="og:url" content="{{fullUrl}}" />
-  <link rel="canonical" href="{{fullUrl}}" />
+  <meta property="og:type" content="article"/>
+  <meta property="og:image" content="{{current_url}}/logo.png"/>
+  <meta property="og:url" content="{{fullUrl}}"/>
+  <link rel="canonical" href="{{fullUrl}}"/>
   <link rel="stylesheet" href="{{app_context}}/stylesheets/flatly.bootstrap.min.css">
   <link rel="stylesheet" href="{{app_context}}/simplemde/simplemde.min.css">
   <link rel="stylesheet" href="{{app_context}}/stylesheets/github.css">
@@ -51,7 +51,7 @@
   <link rel="stylesheet" href="{{app_context}}/stylesheets/bootstrap-tokenfield.css">
   <link rel="stylesheet" href="{{app_context}}/stylesheets/jasny-bootstrap.min.css">
   <link rel="stylesheet" href="{{app_context}}/stylesheets/jpushmenu.css">
-  <link rel='icon' href='/favicon.png' />
+  <link rel='icon' href='/favicon.png'/>
   <script src="{{app_context}}/jquery/jquery.min.js"></script>
   <script>{{{state}}}</script>
   <script src="{{app_context}}/bootstrap/js/bootstrap.min.js"></script>
@@ -74,6 +74,13 @@
   {{#ifCond config.settings.typeahead_search '===' true}}
     <script src="{{app_context}}/lunr/lunr.min.js"></script>
   {{/ifCond}}
+
+  <!--NOTE: ADDED MATHJAX FOR LaTeX SUPPORT-->
+  <script type="text/javascript" async
+          src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+  </script>
+
+
   <script src="{{app_context}}/javascripts/jpushmenu.js"></script>
   <script src="{{app_context}}/javascripts/openKB.js"></script>
   {{#ifCond user_page '===' true}}
@@ -87,7 +94,8 @@
 <nav class="navbar navbar-default navbar-static-top mci-nav">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+              aria-expanded="false" aria-controls="navbar">
         <span class="sr-only">{{__ "Toggle navigation"}}</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -96,11 +104,13 @@
       {{#ifCond config.settings.show_website_logo '===' true}}
         <a class="navbar-brand brand-image" href="{{app_context}}/">
           <img style="display: inline-block" src="{{app_context}}/logo.png" height="40">
-          <span style="color: white; font-size: 1.6em; vertical-align: middle; margin-left: .6em;">{{config.settings.website_title}}</span>
+          <span
+            style="color: white; font-size: 1.6em; vertical-align: middle; margin-left: .6em;">{{config.settings.website_title}}</span>
         </a>
       {{else}}
         {{#ifCond config.settings.website_title '===' 'openKB'}}
-          <a class="navbar-brand brand-image" href="{{app_context}}/"><img src="{{app_context}}/logo.png" height="40"></a>
+          <a class="navbar-brand brand-image" href="{{app_context}}/"><img src="{{app_context}}/logo.png"
+                                                                           height="40"></a>
         {{else}}
           <a class="navbar-brand" href="{{app_context}}/">{{config.settings.website_title}}</a>
         {{/ifCond}}
@@ -114,17 +124,21 @@
             <li><a href="{{app_context}}/edit/{{result._id}}">{{__ "Edit"}}</a></li>
           {{/if}}
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{__ "Users"}} <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+               aria-expanded="false">{{__ "Users"}} <span class="caret"></span></a>
             <ul class="dropdown-menu">
               {{#ifCond session.is_admin '==' 'true'}}
-                <li><a href="{{app_context}}/users/new"><i class="fa fa-user-plus fa-fw"></i>&nbsp; {{__ "New"}}</a></li>
+                <li><a href="{{app_context}}/users/new"><i class="fa fa-user-plus fa-fw"></i>&nbsp; {{__ "New"}}</a>
+                </li>
                 <li><a href="{{app_context}}/users"><i class="fa fa-users fa-fw"></i>&nbsp; {{__ "Edit"}}</a></li>
               {{/ifCond}}
-              <li><a href="{{app_context}}/user/edit/{{session.user_id}}"><i class="fa fa-user fa-fw"></i>&nbsp; {{__ "My account"}}</a></li>
+              <li><a href="{{app_context}}/user/edit/{{session.user_id}}"><i class="fa fa-user fa-fw"></i>&nbsp; {{__
+                "My account"}}</a></li>
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{__ "Article"}} <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+               aria-expanded="false">{{__ "Article"}} <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="{{app_context}}/insert"><i class="fa fa-plus fa-fw"></i>&nbsp; {{__ "New"}}</a></li>
               <li><a href="{{app_context}}/articles"><i class="fa fa-pencil fa-fw"></i>&nbsp; {{__ "Edit"}}</a></li>
@@ -132,13 +146,16 @@
           </li>
           {{#ifCond session.is_admin '==' 'true'}}
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                 aria-expanded="false">Admin <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="{{app_context}}/settings"><i class="fa fa-cog fa-fw"></i>&nbsp; {{__ "Settings"}}</a></li>
                 <li><a href="{{app_context}}/files"><i class="fa fa-files-o fa-fw"></i>&nbsp; {{__ "Files"}}</a></li>
                 <li><a href="{{app_context}}/import"><i class="fa fa-upload fa-fw"></i>&nbsp; {{__ "Import"}}</a></li>
-                <li><a href="{{app_context}}/export"><i class="fa fa-file-archive-o fa-fw"></i>&nbsp; {{__ "Export"}}</a></li>
-                <li><a href="{{app_context}}/file_cleanup"><i class="fa fa-trash fa-fw"></i>&nbsp; {{__ "Cleanup files"}}</a></li>
+                <li><a href="{{app_context}}/export"><i class="fa fa-file-archive-o fa-fw"></i>&nbsp; {{__ "Export"}}
+                </a></li>
+                <li><a href="{{app_context}}/file_cleanup"><i class="fa fa-trash fa-fw"></i>&nbsp; {{__
+                  "Cleanup files"}}</a></li>
               </ul>
             </li>
           {{/ifCond}}
